--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   <h5>Spirit</h5>
                   <p> <p>
                     <label for="earth-date" required>Select an Earth Date you'd like to see! </label>
-                    <input type="date" id="earth-date" class="earth-date" pattern="[0-9]{8}">
+                    <input type="date" id="earth-date" class="earth-date" pattern="[0-9]{8}" min="2004-01-04" max="2010-03-21">
                     <p>
                         <button class="submit">Submit</button>
                     </p>
@@ -57,7 +57,7 @@
                   <h5>Opportunity</h5>
                   <p> <p>
                     <label for="earth-date" required>Select an Earth Date you'd like to see! </label>
-                    <input type="date" id="earth-date" class="earth-date" pattern="[0-9]{8}">
+                    <input type="date" id="earth-date" class="earth-date" pattern="[0-9]{8}" min="2004-01-25" max="2018-06-11">
                     <p>
                         <button class="submit">Submit</button>
                     </p>
@@ -70,7 +70,7 @@
                   <h5>Curiosity</h5>
                   <p> <p>
                     <label for="earth-date" required>Select an Earth Date you'd like to see! </label>
-                    <input type="date" id="earth-date" class="earth-date" pattern="[0-9]{8}">
+                    <input type="date" id="earth-date" class="earth-date" pattern="[0-9]{8}" min="2012-08-06" max="21-05-12">
                     <p>
                         <button class="submit">Submit</button>
                     </p>
