cleaned up white space and grid format.

--- a/public/index.html
+++ b/public/index.html
@@ -46,13 +46,7 @@
                 <div class="col-md-4">
                   <img id ="dailyImage" src="">
                 </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <!-- <h2 class="card-title">Title</h2> -->
-                    <!-- <p class="card-text">Description</p> -->
-                  </div>
                 </section>
-                </div>
               </div>
             </div>
         
@@ -79,13 +73,13 @@
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Spirit</h5>
                   <form class ="spirit">
-                  <p> <p>
+                  <p>
                     <label for="spirit-date" required>Select an Earth Date you'd like to see! </label>
                     <input type="date" id="spirit-date" class="spirit-date" pattern="[0-9]{8}" min="2004-01-04" max="2010-03-21">
                     <p>
                         <button class="submit">Submit</button>
-                      </p>
-                    </p></p>
+                    </p>
+                    </p>
                   </form>
                 </div>
               </div>
@@ -95,13 +89,13 @@
               <div class="carousel-caption d-none d-md-block">
                 <h5>Opportunity</h5>
                 <form class="opportunity">
-                <p> <p>
+                <p>
                     <label for="opportunity-date" required>Select an Earth Date you'd like to see! </label>
                     <input type="date" id="opportunity-date" class="opportunity-date" pattern="[0-9]{8}" min="2004-01-25" max="2018-06-11">
                     <p>
                         <button class="submit">Submit</button>
                     </p>
-                  </p></p>
+                </p>
                 </form>
                 </div>
               </div>
@@ -111,13 +105,13 @@
               <div class="carousel-caption d-none d-md-block">
                 <h5>Curiosity</h5>
                 <form class="curiosity">
-                <p> <p>
+                <p>
                     <label for="curiosity-date" required>Select an Earth Date you'd like to see! </label>
                     <input type="date" id="curiosity-date" class="curiosity-date" pattern="[0-9]{8}" min="2012-08-06" max="21-05-12">
                     <p>
                         <button class="submit">Submit</button>
                     </p>
-                  </p></p>
+                </p>
                 </form>
                 </div>
               </div>
@@ -144,7 +138,7 @@
           <contianer id = "pictureResults" class = "pictureResults">
             
             <div class="results">
-              <p>Here are your results! For testing Purposes</p>
+              <!-- <p>Here are your results! For testing Purposes</p> -->
               <!-- Results Navigation -->
               <!-- <nav>
                 <button class="prev">Previous 10</button>
